--- a/app/src/main/res/layout/fragment_schedule_main.xml
+++ b/app/src/main/res/layout/fragment_schedule_main.xml
@@ -2,9 +2,9 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -27,13 +27,11 @@
                 <CalendarView
                     android:id="@+id/calendarView"
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
-
-                     />
+                    android:layout_height="300dp" />
 
             </androidx.cardview.widget.CardView>
 
-            <!-- 今日习惯列表 -->
+            <!-- 今日任务列表 -->
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -49,6 +47,7 @@
                     android:padding="16dp">
 
                     <TextView
+                        android:id="@+id/task_list_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="今日任务"
@@ -59,7 +58,10 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/habit_list"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:minHeight="80dp"
+                        tools:listitem="@layout/item_schedule"
+                        tools:itemCount="3"/>
 
                 </LinearLayout>
 
@@ -69,16 +71,17 @@
 
     </androidx.core.widget.NestedScrollView>
 
-    <!-- 添加习惯按钮 -->
+    <!-- 添加任务按钮 -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add_task"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-
-        android:layout_marginBottom="140dp"
-        android:layout_marginEnd="20dp"
+        android:layout_margin="16dp"
+        android:contentDescription="添加新任务"
         android:src="@android:drawable/ic_input_add"
-        app:fabSize="normal"/>
+        app:backgroundTint="#5E97F6"
+        app:fabSize="normal"
+        app:tint="@android:color/white"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
